new jvm environments
Signed-off-by: sahil-lakhwani <sahilakhwani@gmail.com>